# django3

./: .gitignore  README.md  pyproject.toml
quotes/mongodatabase/: connect.py  unseed.py
quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_quote_author_alter_quote_quote.py  0003_alter_quote_tags.py  0004_remove_quote_tags.py  0005_quote_tags.py  0006_remove_quote_tags.py  0007_quote_tags.py  0008_alter_quote_tags.py  0009_alter_quote_tags.py  0010_alter_quote_tags.py  0011_tag_remove_quote_tags.py  0012_rename_tag_tag_tittle_quote_tags.py  0013_alter_quote_tags.py  0014_alter_author_born_location.py  0015_alter_author_description.py  0016_alter_author_born_location.py  0017_alter_tag_tittle.py
quotes/quoteapp/templates/quoteapp/: about_author.html  about_quote.html  base.html  edit_author.html  edit_quote.html  index.html  the_search_result.html  top_10.html  upload_author.html
quotes/quotes/: authentication.py  settings.py  urls.py
quotes/scrap_scrap/: quote_scrapy.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: signin.html
