[tool.poetry]
name = "django3"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
mongoengine = "^0.27.0"
scrapy = "^2.8.0"
requests = "^2.28.2"
xlml = "^0.1.2"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
